Revert commit a0c257b8487171cc18754e399ec6ee4ea37d4998

--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -18,22 +18,22 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Loading Libraries
 library(bookdown)
-library(dplyr)
-library(eeptools)
-library(ggplot2)
-library(gridExtra)
-library(knitr)
 library(readxl)
-library(renv)
-library(scales)
+library(dplyr)
 library(tidyr)
+library(ggplot2)
+library(scales)
 library(tidyverse)
+library(knitr)
+library(gridExtra)
+library(eeptools)
 
 # Loading Data
 table_1 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 2, skip = 2, col_names = TRUE)
+#table_2 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 3, skip = 2, col_names = TRUE)
+#table_3 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 4, skip = 2, col_names = TRUE)
+#table_4 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 5, skip = 2, col_names = TRUE)
 table_7 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 8, skip = 2, col_names = TRUE)
-table_8 <- read.csv("Data/HELP_DATA_TIDIED.csv")
-
 ```
 
 # Introduction
@@ -59,6 +59,12 @@ This section will investigate:
 2. *How does total outstanding debt and number of debtors change over time by i) sex and ii) age group?*
 
 ### Total Outstanding Debt and Total Debtors 2005-2022 {#yearsection}
+
+```{r loading, include=FALSE, message=FALSE, warning=FALSE}
+
+table_8 <- read.csv("Data/HELP_DATA_TIDIED.csv")
+
+```
 
 ```{r table1, message=FALSE, warning=FALSE, echo=FALSE}
 # Group By Year 
