Cleaning up bib file formatting and fixing typos

--- a/references.bib
+++ b/references.bib
@@ -1,47 +1,48 @@
 @incollection{BaumSandy2016SLPa,
-abstract = {The main purpose of federal student loans is to solve cash flow problems, not to pay part of the cost of education. Grant aid is the best way to provide subsidies to disadvantaged students. But some borrowers need help paying back their loans because their education does not pay off as well as anticipated. Measures of the amounts individual students borrow are generally more meaningful than the total amount of debt outstanding and there is quite a bit of variation in the borrowing patterns of different students. For example, older students and graduate students tend to carry more debt than others. Default rates are disturbingly high, but the biggest problems are among students who do not complete their programs and among those who attended for-profit institutions.},
-pages = {17--42},
-publisher = {Palgrave Macmillan},
-booktitle = {Student Debt},
-isbn = {9781349949434},
-year = {2016},
-title = {Student Loan Programs and the Realities of Student Debt},
-copyright = {The Editor(s) (if applicable) and The Author(s) 2016},
-language = {eng},
-address = {United States},
-author = {Baum, Sandy},
-keywords = {College finance ; Educational strategies & policy ; Higher & further education, tertiary education ; Student debt ; Student loan default},
+  abstract = {The main purpose of federal student loans is to solve cash flow problems, not to pay part of the cost of education. Grant aid is the best way to provide subsidies to disadvantaged students. But some borrowers               need help paying back their loans because their education does not pay off as well as anticipated. Measures of the amounts individual students borrow are generally more meaningful than the total amount of debt               outstanding   and there is quite a bit of variation in the borrowing patterns of different students. For example, older students and graduate students tend to carry more debt than others. Default rates are                  disturbingly high, but the   biggest problems are among students who do not complete their programs and among those who attended for-profit institutions.},
+  pages = {17--42},
+  publisher = {Palgrave Macmillan},
+  booktitle = {Student Debt},
+  isbn = {9781349949434},
+  year = {2016},
+  title = {Student Loan Programs and the Realities of Student Debt},
+  copyright = {The Editor(s) (if applicable) and The Author(s) 2016},
+  language = {eng},
+  address = {United States},
+  author = {Baum, Sandy},
+  keywords = {College finance ; Educational strategies & policy ; Higher & further education, tertiary education ; Student debt ; Student loan default},
 }
 
 @book{albrecht1991deferred,
-  title={Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
-  author={Albrecht, D. and Ziderman, A.},
-  number={pts. 63-137},
-  isbn={9780821319529},
-  lccn={lc91035046},
-  series={Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
-  url={https://books.google.com.au/books?id=GCWa2sbFoD0C},
-  year={1991},
-  publisher={World Bank}
+  title = {Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
+  author = {Albrecht, D. and Ziderman, A.},
+  number = {pts. 63-137},
+  isbn = {9780821319529},
+  lccn = {lc91035046},
+  series = {Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
+  url = {https://books.google.com.au/books?id=GCWa2sbFoD0C},
+  year = {1991},
+  publisher = {World Bank}
 }
 
 @techreport{anao2016,
-author = {Jackson, K. and Esguerra, E. and Callaway, N. and Liao, J. and Morris, A.},
-title = {Administration of Higher Education Loan Program
-Debt and Repayments},
-series = {Technical Report},
-volume = {31},
-publisher = {Australian National Audit Office},
-address = {Canberra ACT},
-year = {2016}
+  author = {Jackson, K. and Esguerra, E. and Callaway, N. and Liao, J. and Morris, A.},
+  title = {Administration of Higher Education Loan Program
+  Debt and Repayments},
+  series = {Technical Report},
+  volume = {31},
+  publisher = {Australian National Audit Office},
+  address = {Canberra ACT},
+  year = {2016}
 }
+
 @techreport{pwc2019,
-author={Dunn, W. and Kamath, R. and Mucherla, R. and Pereira, I. and Perera, S. and Rogers, J.},
-title = {The reality of a new era for Australian banking, Banking Matters, Major Banks Analysis Full Year November 2019},
-series={Banking Matters, Major Banks Analysis Full Year November 2019},
-url={https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_matters_nov_full_19.pdf},
-year={2019},
-publisher={PwC}
+  author = {Dunn, W. and Kamath, R. and Mucherla, R. and Pereira, I. and Perera, S. and Rogers, J.},
+  title = {The reality of a new era for Australian banking, Banking Matters, Major Banks Analysis Full Year November 2019},
+  series = {Banking Matters, Major Banks Analysis Full Year November 2019},
+  url = {https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_matters_nov_full_19.pdf},
+  year = {2019},
+  publisher = {PwC}
 }
 
 @article{c_callender_g_mason_does_2017,
@@ -50,7 +51,7 @@ publisher={PwC}
 	url = {https://journals.sagepub.com/doi/abs/10.1177/0002716217696041},
 	number = {1},
 	journaltitle = {Sage Journals},
-	author = {{C. Callender; G. Mason}},
+	author = {Callender, C. and Mason, G.},
 	date = {2017},
 }
 
@@ -78,11 +79,12 @@ publisher={PwC}
 	author = {{Universities Australia}},
 	date = {2022},
 }
-@misc{dataSet2022,
-  title = {Higher Education Loan Program (HELP)}
-  url = {https://data.gov.au/data/dataset/higher-education-loan-program-help}
-  institution = {Australian Taxation Office}
-  author = {{Australian Taxation Office}}
-  date = {2022}
 
+@misc{dataSet2022,
+  title = {Higher Education Loan Program (HELP)},
+  url = {https://data.gov.au/data/dataset/higher-education-loan-program-help},
+  institution = {Australian Taxation Office},
+  author = {{Australian Taxation Office}},
+  date = {2022},
 }
+
