Adding CRAN and Rstudio software references to .bib and .Rmd file with no cite

--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -11,6 +11,8 @@ output:
     fig_height: 5
 bibliography: references.bib
 csl: apa.csl
+nocite: |
+  @CRAN, @RStudio
 ---
 
 ```{r setup, include=FALSE}
