--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @incollection{BaumSandy2016SLPa,
   abstract = {The main purpose of federal student loans is to solve cash flow problems, not to pay part of the cost of education. Grant aid is the best way to provide subsidies to disadvantaged students. But some borrowers               need help paying back their loans because their education does not pay off as well as anticipated. Measures of the amounts individual students borrow are generally more meaningful than the total amount of debt               outstanding   and there is quite a bit of variation in the borrowing patterns of different students. For example, older students and graduate students tend to carry more debt than others. Default rates are                  disturbingly high, but the   biggest problems are among students who do not complete their programs and among those who attended for-profit institutions.},
-  pages = {17--42},
+  pages = {17-42},
   publisher = {Palgrave Macmillan},
   booktitle = {Student Debt},
   isbn = {9781349949434},
@@ -88,3 +88,18 @@
   date = {2022},
 }
 
+@software{CRAN,
+  author = {Altmann, B. and Hornik, K. and Kalibera, T. and Ligges, U. and Ripley, B.D. and Urbanek, S. and Wimmer, V.},
+  title = {The Comprehensive R Archive Network},
+  url = {https://cran.rstudio.com/},
+  version = {4.3.0},
+  date = {2023-04-21},
+}
+
+@software{RStudio,
+  author = {Posit},
+  title = {RStudio IDE},
+  url = {https://posit.co/products/open-source/rstudio/},
+  version = {2023.06.0+421},
+  date = {2023-06-08},
+}
