Rearranging conclusion section, updating packages.txt file and README file to correct package versions

--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -452,11 +452,11 @@ In table \@ref(fig:DebtWriteoffGraph) Annual debt writeoff as percentage of new 
 
 # Conclusion
 
-Based on the analysis in \@ref(distribution) and \@ref(median), most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution in Figure \@ref(fig:distfig) represents the government’s risk in recovering HELP debt in 2021. Up to $20,000 to $29,999, the risk increases as many debtors do not meet the minimum repayment threshold. However, beyond $30,000, as income increases, the government's risk decreases as more repayments are made through the tax system. The increase of median and mean income observed in Figure \@ref(fig:medianfig) indicate an overall inflation of debtor income since 2009, meaning an improved ability to repay the HELP debt. This observation is supported by Figure \@ref(fig:DebtRepaymentGraph) which shows significant increase in annual payments received from 2016 reflective of increased debtor income and being pushed into higher repayment brackets.
-
 The number of debtors and outstanding debt has steadily increased since 2005. From 2005 to 2021, there has been an increase of 1.82 million people in debt. During this same period, there has been an increase in outstanding debt of $62 billion \@ref(yearsection). Females are more likely to have HELP debt and there is an increasing gap between males and females in debt \@ref(sexsection). It appears with age, the risk of student debt decreases. All age groups increased in debtors and outstanding debt for 2005-2021, except for the age group 0-19, which saw a sudden drop in 2018-2021 \@ref(agesection). Overall, Student debt levels are rising, along with a rise in older people with outstanding debt, especially women [@preston_gender_2023]. 
 
-However, this analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Further progressed careers and larger debts which may indicate higher education further both may increase the level of income earned, while newer graduates may be in a lower income group.
+Based on the analysis in \@ref(distribution) and \@ref(median), most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution in Figure \@ref(fig:distfig) represents the government’s risk in recovering HELP debt in 2021. Up to $20,000 to $29,999, the risk increases as many debtors fail to meet the minimum repayment threshold. However, beyond $30,000, income increases correlate with decreasing risk as more repayments are made through the tax system. 
+
+However, this analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Further progressed careers and larger debts from higher education may correlate with an increase in the level of income earned, and vice versa. The increase of median and mean income observed in Figure \@ref(fig:medianfig) indicate an overall inflation of debtor income since 2009, suggesting an improved ability to repay HELP debt and indicating good long-term sustainability for the program. This observation is supported by Figure \@ref(fig:DebtRepaymentGraph) which shows significant increase in annual payments received from 2016 reflective of increased debtor income and being pushed into higher repayment brackets.
 
 # References
 
